pages/invitation/[invitationId]/invitation.module.css
.InvitationPage_panel {
  @apply mx-auto mt-8 w-full max-w-3xl border-4 border-black bg-white p-8;
  box-shadow: 0 6px 6px -6px #000;
}

.InvitationPage_heading {
  @apply font-display text-4xl tracking-wider;
}

.InvitationPage_message {
  @apply text-2xl tracking-wider;
}

.InvitationPage_message:not(:last-child) {
  @apply mb-8;
}

.InvitationPage_inviteeName {
  @apply bg-gradient-to-br from-sky-600 to-sky-300 bg-clip-text text-transparent;
}

.InvitationPage_eventDetail {
  @apply mb-8;
}

.InvitationPage_eventDetailLabel {
  @apply font-display text-2xl text-sky-500;
}

.InvitationPage_eventDetailText {
  @apply text-3xl font-black;
}

.InvitationPage_a {
  @apply my-4 block text-lg underline underline-offset-4;
}

.InvitationPage_buttons {
  @apply flex flex-col pb-4;
}

@screen lg {
  .InvitationPage_buttons {
    @apply flex-row justify-center space-x-8;
  }

  .InvitationPage_eventDetailLabel {
    @apply text-3xl;
  }

  .InvitationPage_eventDetailText {
    @apply text-4xl;
  }
}

